--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ button {
 
   <div class="player" id="player">
     <iframe width="100%" height="200"
-      src="https://youtu.be/HCoTcCMLRsM?si=xVmqWdvfEkQTW1at"
+      src="https://www.youtube.com/embed/HCoTcCMLRsM?si=nYokaPO0b5w2V-Ye"
       frameborder="0"
       allow="autoplay; encrypted-media"
       allowfullscreen>
