--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
   height: 260px;
   margin: 30px auto;
   border-radius: 50%;
-  background: radial-gradient(circle at center, #555 0%, #222 40%, #000 70%);
+  background: radial-gradient(circle at center, #666 0%, #333 40%, #000 70%);
   position: relative;
   animation: spin 8s linear infinite;
   animation-play-state: paused;
@@ -69,7 +69,9 @@ button {
 
 .player {
   margin-top: 25px;
-  display: none;
+  max-width: 560px;
+  margin-left: auto;
+  margin-right: auto;
 }
 </style>
 </head>
@@ -77,6 +79,7 @@ button {
 <body>
 
 <div class="container">
+
   <div class="cd" id="cd"></div>
 
   <div class="title">Q</div>
@@ -84,20 +87,30 @@ button {
 
   <button onclick="play()">▶ PLAY</button>
 
-  <div class="player" id="player">
-    <iframe width="100%" height="200"
-      src="https://www.youtube.com/embed/HCoTcCMLRsM?si=nYokaPO0b5w2V-Ye"
+  <!-- iframeは最初からDOMに置く（重要） -->
+  <div class="player">
+    <iframe
+      id="ytplayer"
+      width="100%"
+      height="315"
+      src="https://www.youtube-nocookie.com/embed/HCoTcCMLRsM?si=nYokaPO0b5w2V-Ye?rel=0&playsinline=1"
+      title="YouTube video player"
       frameborder="0"
-      allow="autoplay; encrypted-media"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
   </div>
+
 </div>
 
 <script>
 function play() {
-  document.getElementById("player").style.display = "block";
+  // CD回転開始
   document.getElementById("cd").style.animationPlayState = "running";
+
+  // 再生指示（ユーザー操作内なのでOK）
+  const iframe = document.getElementById("ytplayer");
+  iframe.src += "&autoplay=1";
 }
 </script>
 
