--- a/index.html
+++ b/index.html
@@ -2,74 +2,106 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>CD Player</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Now Playing</title>
+
 <style>
-  body {
-    background:#111;
-    color:#fff;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    font-family:sans-serif;
-  }
-  .cd {
-    width:260px;
-    height:260px;
-    border-radius:50%;
-    background:radial-gradient(circle,#444 0%,#111 60%);
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    position:relative;
-  }
-  .skip {
-    position:absolute;
-    bottom:-40px;
-    font-size:12px;
-    opacity:0.6;
-    cursor:pointer;
-  }
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+  background: #111;
+  color: #fff;
+  text-align: center;
+}
+
+.container {
+  padding: 30px 15px;
+}
+
+.cd {
+  width: 260px;
+  height: 260px;
+  margin: 30px auto;
+  border-radius: 50%;
+  background: radial-gradient(circle at center, #555 0%, #222 40%, #000 70%);
+  position: relative;
+  animation: spin 8s linear infinite;
+  animation-play-state: paused;
+}
+
+.cd::after {
+  content: "";
+  width: 40px;
+  height: 40px;
+  background: #111;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.title {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.artist {
+  font-size: 14px;
+  color: #aaa;
+  margin-bottom: 20px;
+}
+
+button {
+  background: #fff;
+  color: #000;
+  border: none;
+  padding: 12px 30px;
+  font-size: 16px;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+/* ▼ 動画を完全に見えなくする */
+.player {
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
 </style>
 </head>
+
 <body>
 
-<div class="cd">
-  <div id="player" style="width:0;height:0;overflow:hidden;"></div>
-  <div class="skip" onclick="openYoutube()">
-    再生できない場合はこちら
+<div class="container">
+  <div class="cd" id="cd"></div>
+
+  <div class="title">Q</div>
+  <div class="artist">REBEL</div>
+
+  <button onclick="play()">▶ PLAY</button>
+
+  <div class="player" id="player">
+    <iframe
+      src="https://www.youtube.com/embed/HCoTcCMLRsM?si=cxobZcbi_lfGk19m?autoplay=1&rel=0"
+      frameborder="0"
+      allow="autoplay; encrypted-media"
+      allowfullscreen>
+    </iframe>
   </div>
 </div>
 
-<script src="https://www.youtube.com/iframe_api"></script>
 <script>
-let player;
-
-function onYouTubeIframeAPIReady() {
-  player = new YT.Player('player', {
-    videoId: 'VIDEO_ID',
-    playerVars: {
-      autoplay: 1,
-      controls: 0,
-      rel: 0,
-      playsinline: 1,
-      mute: 1
-    },
-    events: {
-      onReady: onPlayerReady
-    }
-  });
-}
-
-function onPlayerReady() {
-  // 最初の5秒は無音
-  setTimeout(() => {
-    player.unMute();
-  }, 5000);
-}
-
-function openYoutube() {
-  window.open('https://www.youtube.com/watch?v=HCoTcCMLRsM?si=cxobZcbi_lfGk19m', '_blank');
+function play() {
+  document.getElementById("player").style.display = "block";
+  document.getElementById("cd").style.animationPlayState = "running";
 }
 </script>
 
