--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
   height: 260px;
   margin: 30px auto;
   border-radius: 50%;
-  background: radial-gradient(circle at center, #555 0%, #222 40%, #000 70%);
+  background: radial-gradient(circle at center, #666 0%, #333 40%, #000 70%);
   position: relative;
   animation: spin 8s linear infinite;
   animation-play-state: paused;
@@ -67,13 +67,11 @@ button {
   cursor: pointer;
 }
 
-/* ▼ 動画を完全に見えなくする */
 .player {
-  width: 0;
-  height: 0;
-  overflow: hidden;
-  opacity: 0;
-  pointer-events: none;
+  margin-top: 25px;
+  max-width: 560px;
+  margin-left: auto;
+  margin-right: auto;
 }
 </style>
 </head>
@@ -81,29 +79,41 @@ button {
 <body>
 
 <div class="container">
+
   <div class="cd" id="cd"></div>
 
-  <div class="title">Q</div>
-  <div class="artist">REBEL</div>
+  <div class="title">曲名をここに</div>
+  <div class="artist">Artist Name</div>
 
   <button onclick="play()">▶ PLAY</button>
 
-  <div class="player" id="player">
+  <!-- iframeは最初からDOMに置く（重要） -->
+  <div class="player">
     <iframe
-      src="https://www.youtube.com/embed/HCoTcCMLRsM?si=cxobZcbi_lfGk19m?autoplay=1&rel=0"
+      id="ytplayer"
+      width="100%"
+      height="315"
+      src="https://www.youtube-nocookie.com/embed/HCoTcCMLRsM?rel=0&playsinline=1"
+      title="YouTube video player"
       frameborder="0"
-      allow="autoplay; encrypted-media"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
   </div>
+
 </div>
 
 <script>
 function play() {
-  document.getElementById("player").style.display = "block";
+  // CD回転開始
   document.getElementById("cd").style.animationPlayState = "running";
+
+  // 再生指示（ユーザー操作内なのでOK）
+  const iframe = document.getElementById("ytplayer");
+  iframe.src += "&autoplay=1";
 }
 </script>
 
 </body>
 </html>
+
