--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@ button {
   cursor: pointer;
 }
 
+/* ▼ 見えないが再生はされる */
 .player {
-  margin-top: 25px;
-  max-width: 560px;
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
 </style>
 </head>
@@ -82,16 +85,16 @@ button {
 
   <div class="cd" id="cd"></div>
 
-  <div class="title">曲名をここに</div>
-  <div class="artist">Artist Name</div>
+  <div class="title">Q</div>
+  <div class="artist">REBEL</div>
 
   <button onclick="play()">▶ PLAY</button>
 
-  <!-- iframeは最初からDOMに置く（重要） -->
+  <!-- DOMには存在するが見えない -->
   <div class="player">
     <iframe
       id="ytplayer"
-      width="100%"
+      width="560"
       height="315"
       src="https://www.youtube-nocookie.com/embed/HCoTcCMLRsM?rel=0&playsinline=1"
       title="YouTube video player"
@@ -108,12 +111,13 @@ function play() {
   // CD回転開始
   document.getElementById("cd").style.animationPlayState = "running";
 
-  // 再生指示（ユーザー操作内なのでOK）
+  // autoplay を付与（ユーザー操作内なのでiOS OK）
   const iframe = document.getElementById("ytplayer");
-  iframe.src += "&autoplay=1";
+  if (!iframe.src.includes("autoplay=1")) {
+    iframe.src += "&autoplay=1";
+  }
 }
 </script>
 
 </body>
 </html>
-
