--- a/index.html
+++ b/index.html
@@ -45,25 +45,16 @@ button {
   cursor: pointer;
 }
 
-/* 端っこYouTube */
+/* 完全に見えないYouTube */
 .player {
   position: fixed;
-  right: 8px;
-  bottom: 8px;
-  width: 160px;
-  height: 90px;
-  opacity: 0.15; /* 通常は薄い */
-  transition: opacity 0.4s ease;
-}
-
-.player.ad {
-  opacity: 1; /* 広告っぽい時だけ100% */
-}
-
-.player iframe {
-  width: 100%;
-  height: 100%;
-  border-radius: 6px;
+  right: 0;
+  bottom: 0;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+  pointer-events: none;
+  overflow: hidden;
 }
 </style>
 </head>
@@ -82,7 +73,6 @@ button {
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
 let ytPlayer;
-let fadeInterval;
 
 function onYouTubeIframeAPIReady() {
   ytPlayer = new YT.Player('player', {
@@ -90,9 +80,6 @@ function onYouTubeIframeAPIReady() {
     playerVars: {
       playsinline: 1,
       rel: 0
-    },
-    events: {
-      onStateChange: onStateChange
     }
   });
 }
@@ -100,38 +87,6 @@ function onYouTubeIframeAPIReady() {
 function start() {
   document.getElementById("cd").style.animationPlayState = "running";
   ytPlayer.playVideo();
-}
-
-/* 再生状態変化 */
-function onStateChange(e) {
-  const playerEl = document.getElementById("player");
-
-  if (e.data === YT.PlayerState.PLAYING) {
-    // 再生初期＝広告っぽい演出
-    playerEl.classList.add("ad");
-
-    // 5秒後に通常表示へ
-    setTimeout(() => {
-      playerEl.classList.remove("ad");
-    }, 15000);
-
-    startFadeIn();
-  }
-}
-
-/* 音声フェードイン */
-function startFadeIn() {
-  ytPlayer.setVolume(0);
-
-  // 最初の5秒は無音
-  setTimeout(() => {
-    let volume = 0;
-    fadeInterval = setInterval(() => {
-      volume += 5;
-      ytPlayer.setVolume(volume);
-      if (volume >= 100) clearInterval(fadeInterval);
-    }, 150);
-  }, 5000);
 }
 </script>
 
