--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@ button {
   transition: opacity 0.3s ease;
 }
 
+/* ユーザーが触れた時だけ少し見える */
+.player:active,
+.player:hover {
+  opacity: 0.25;
+}
+
 .player iframe {
   width: 100%;
   height: 100%;
