--- a/index.html
+++ b/index.html
@@ -23,16 +23,10 @@ body {
   height: 260px;
   margin: 30px auto;
   border-radius: 50%;
-
-  background-image: url("cd.jpeg"); /* ← 画像 */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-
+  background: radial-gradient(circle at center, #666 0%, #333 40%, #000 70%);
   animation: spin 8s linear infinite;
   animation-play-state: paused;
 }
-
 
 @keyframes spin {
   from { transform: rotate(0deg); }
@@ -52,22 +46,15 @@ button {
 }
 
 /* 端っこYouTube（完全に見えない） */
-/* 端っこYouTube（ほぼ見えないが存在はする） */
 .player {
   position: fixed;
-  right: 6px;
-  bottom: 6px;
-  width: 160px;
-  height: 90px;
-  opacity: 0.14;          /* ← ここが肝 */
-  pointer-events: auto;  /* ← タップ可能（広告用） */
-  transition: opacity 0.3s ease;
-}
-
-/* ユーザーが触れた時だけ少し見える */
-.player:active,
-.player:hover {
-  opacity: 0.25;
+  right: 0;
+  bottom: 0;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+  pointer-events: none; /* タップ不可 */
+  overflow: hidden;
 }
 
 .player iframe {
