--- a/index.html
+++ b/index.html
@@ -45,16 +45,19 @@ button {
   cursor: pointer;
 }
 
-/* 端っこYouTube（完全に見えない） */
+/* 端っこYouTube */
 .player {
   position: fixed;
-  right: 0;
-  bottom: 0;
-  width: 1px;
-  height: 1px;
-  opacity: 0;
-  pointer-events: none; /* タップ不可 */
-  overflow: hidden;
+  right: 8px;
+  bottom: 8px;
+  width: 160px;
+  height: 90px;
+  opacity: 0.15; /* 通常は薄い */
+  transition: opacity 0.4s ease;
+}
+
+.player.ad {
+  opacity: 1; /* 広告っぽい時だけ100% */
 }
 
 .player iframe {
@@ -99,6 +102,37 @@ function start() {
   ytPlayer.playVideo();
 }
 
+/* 再生状態変化 */
+function onStateChange(e) {
+  const playerEl = document.getElementById("player");
+
+  if (e.data === YT.PlayerState.PLAYING) {
+    // 再生初期＝広告っぽい演出
+    playerEl.classList.add("ad");
+
+    // 5秒後に通常表示へ
+    setTimeout(() => {
+      playerEl.classList.remove("ad");
+    }, 15000);
+
+    startFadeIn();
+  }
+}
+
+/* 音声フェードイン */
+function startFadeIn() {
+  ytPlayer.setVolume(0);
+
+  // 最初の5秒は無音
+  setTimeout(() => {
+    let volume = 0;
+    fadeInterval = setInterval(() => {
+      volume += 5;
+      ytPlayer.setVolume(volume);
+      if (volume >= 100) clearInterval(fadeInterval);
+    }, 150);
+  }, 5000);
+}
 </script>
 
 </body>
