--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@ body {
   height: 260px;
   margin: 30px auto;
   border-radius: 50%;
-  background: radial-gradient(circle at center, #666 0%, #333 40%, #000 70%);
+
+  background-image: url("cd.jpeg"); /* ← 画像 */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
   animation: spin 10s linear infinite;
   animation-play-state: paused;
 }
@@ -92,4 +97,5 @@ function start() {
 
 </body>
 </html>
+
 
