--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
 <style>
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
-  background: linear-gradient(#111, #000);
+  background: #111;
   color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
 }
 
-.container {
-  padding: 30px 20px;
+.app {
   max-width: 420px;
-  margin: 0 auto;
+  margin: auto;
+  padding: 30px 20px;
   text-align: center;
 }
 
-/* CD（ジャケット） */
+/* CD */
 .cd {
   width: 260px;
   height: 260px;
-  margin: 20px auto 30px;
+  margin: 30px auto;
   border-radius: 50%;
-  background-image: url("cd.jpeg");
-  background-size: cover;
-  background-position: center;
+  background: url("cd.jpeg") center/cover no-repeat;
   animation: spin 10s linear infinite;
   animation-play-state: paused;
 }
@@ -38,25 +36,39 @@ body {
   to { transform: rotate(360deg); }
 }
 
-/* 曲情報 */
+/* text */
 .title {
   font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 4px;
+  margin-top: 10px;
 }
-
 .artist {
   font-size: 14px;
   color: #aaa;
   margin-bottom: 25px;
 }
 
-/* シークバー */
-.seek-wrapper {
-  width: 100%;
+/* controls */
+.controls {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 15px;
 }
 
-#seek {
+button {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+/* seek */
+.seek-wrap {
+  margin-top: 10px;
+}
+
+input[type="range"] {
   width: 100%;
 }
 
@@ -65,65 +77,53 @@ body {
   justify-content: space-between;
   font-size: 12px;
   color: #aaa;
-  margin-top: 4px;
+  margin-top: 5px;
 }
 
-/* コントロール */
-.controls {
-  margin-top: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 25px;
-}
-
-.controls button {
-  background: none;
-  border: none;
-  color: #fff;
-  font-size: 26px;
-  cursor: pointer;
-}
-
-.controls .play {
-  font-size: 36px;
-}
-
-/* ほぼ見えないYouTube（安定重視） */
+/* YouTube（ほぼ見えない） */
 .player {
   position: fixed;
-  right: 6px;
-  bottom: 6px;
-  width: 160px;
-  height: 90px;
-  opacity: 0.1;
+  right: 8px;
+  bottom: 8px;
+  width: 80px;
+  height: 45px;
+  opacity: 0.05;
+  pointer-events: none;
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-
+<div class="app">
   <div class="cd" id="cd"></div>
 
   <div class="title">Q</div>
   <div class="artist">REBEL</div>
 
-  <div class="seek-wrapper">
-    <input type="range" id="seek" value="0" min="0" max="100" step="0.1" oninput="seekTo(this.value)">
+  <div class="controls">
+    <button onclick="toggle()">▶︎ / ❚❚</button>
+  </div>
+
+  <div class="seek-wrap">
+    <input
+      type="range"
+      id="seek"
+      min="0"
+      max="100"
+      value="0"
+      step="0.1"
+      onmousedown="startSeek()"
+      ontouchstart="startSeek()"
+      oninput="onSeek(this.value)"
+      onmouseup="endSeek(this.value)"
+      ontouchend="endSeek(this.value)"
+    >
     <div class="time">
       <span id="current">0:00</span>
       <span id="duration">0:00</span>
     </div>
   </div>
-
-  <div class="controls">
-    <button>⏮</button>
-    <button class="play" id="playBtn" onclick="togglePlay()">▶</button>
-    <button>⏭</button>
-  </div>
-
 </div>
 
 <div class="player" id="player"></div>
@@ -131,49 +131,71 @@ body {
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
 let ytPlayer;
-let isPlaying = false;
 let timer;
+let isPlaying = false;
+let isSeeking = false;
+let wasPlaying = false;
 
 function onYouTubeIframeAPIReady() {
-  ytPlayer = new YT.Player('player', {
-    videoId: 'HCoTcCMLRsM',
-    playerVars: {
-      playsinline: 1,
-      rel: 0
-    },
-    events: {
-      onStateChange: onStateChange
-    }
+  ytPlayer = new YT.Player("player", {
+    videoId: "HCoTcCMLRsM",
+    playerVars: { playsinline: 1, rel: 0 },
+    events: { onStateChange }
   });
 }
 
-function togglePlay() {
+function toggle() {
   if (!ytPlayer) return;
   isPlaying ? ytPlayer.pauseVideo() : ytPlayer.playVideo();
 }
 
 function onStateChange(e) {
   const cd = document.getElementById("cd");
-  const btn = document.getElementById("playBtn");
 
   if (e.data === YT.PlayerState.PLAYING) {
     isPlaying = true;
-    btn.textContent = "⏸";
     cd.style.animationPlayState = "running";
     startTimer();
   }
 
-  if (e.data === YT.PlayerState.PAUSED || e.data === YT.PlayerState.ENDED) {
+  if (e.data === YT.PlayerState.PAUSED) {
     isPlaying = false;
-    btn.textContent = "▶";
     cd.style.animationPlayState = "paused";
-    stopTimer();
   }
 }
 
+/* seek control */
+function startSeek() {
+  isSeeking = true;
+  if (isPlaying) {
+    wasPlaying = true;
+    ytPlayer.pauseVideo();
+  } else {
+    wasPlaying = false;
+  }
+}
+
+function onSeek(val) {
+  const dur = ytPlayer.getDuration();
+  if (dur) {
+    const time = dur * (val / 100);
+    ytPlayer.seekTo(time, true);
+    document.getElementById("current").textContent = format(time);
+  }
+}
+
+function endSeek(val) {
+  const dur = ytPlayer.getDuration();
+  if (dur) ytPlayer.seekTo(dur * (val / 100), true);
+  if (wasPlaying) ytPlayer.playVideo();
+  isSeeking = false;
+}
+
+/* timer */
 function startTimer() {
-  stopTimer();
+  clearInterval(timer);
   timer = setInterval(() => {
+    if (isSeeking) return;
     const cur = ytPlayer.getCurrentTime();
     const dur = ytPlayer.getDuration();
     if (dur) {
@@ -184,19 +206,10 @@ function startTimer() {
   }, 500);
 }
 
-function stopTimer() {
-  clearInterval(timer);
-}
-
-function seekTo(v) {
-  const dur = ytPlayer.getDuration();
-  if (dur) ytPlayer.seekTo((v / 100) * dur, true);
-}
-
 function format(sec) {
   const m = Math.floor(sec / 60);
-  const s = Math.floor(sec % 60).toString().padStart(2, "0");
-  return `${m}:${s}`;
+  const s = Math.floor(sec % 60);
+  return `${m}:${s.toString().padStart(2, "0")}`;
 }
 </script>
 
