--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 <style>
 body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
   background: #111;
   color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+  text-align: center;
 }
 
-.app {
-  max-width: 420px;
-  margin: auto;
-  padding: 30px 20px;
-  text-align: center;
+.container {
+  padding: 30px 15px;
 }
 
 /* CD */
@@ -26,7 +24,9 @@ body {
   height: 260px;
   margin: 30px auto;
   border-radius: 50%;
-  background: url("cd.jpeg") center/cover no-repeat;
+  background-image: url("cd.jpeg");
+  background-size: cover;
+  background-position: center;
   animation: spin 10s linear infinite;
   animation-play-state: paused;
 }
@@ -36,57 +36,49 @@ body {
   to { transform: rotate(360deg); }
 }
 
-/* text */
-.title {
-  font-size: 20px;
-  margin-top: 10px;
-}
-.artist {
-  font-size: 14px;
-  color: #aaa;
-  margin-bottom: 25px;
+.title { font-size: 20px; }
+.artist { font-size: 14px; color: #aaa; margin-bottom: 20px; }
+
+/* プレイヤーUI */
+.controls {
+  max-width: 320px;
+  margin: 20px auto 0;
 }
 
-/* controls */
-.controls {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 15px;
+.buttons {
+  margin-bottom: 10px;
 }
 
 button {
-  background: none;
+  background: #fff;
+  color: #000;
   border: none;
-  color: #fff;
-  font-size: 22px;
+  padding: 8px 18px;
+  border-radius: 20px;
+  font-size: 14px;
   cursor: pointer;
+  margin: 0 5px;
 }
 
-/* seek */
-.seek-wrap {
-  margin-top: 10px;
-}
-
-input[type="range"] {
+.seekbar {
   width: 100%;
 }
 
 .time {
-  display: flex;
-  justify-content: space-between;
   font-size: 12px;
   color: #aaa;
-  margin-top: 5px;
+  margin-top: 4px;
+  display: flex;
+  justify-content: space-between;
 }
 
-/* YouTube（ほぼ見えない） */
+/* ほぼ見えないYouTube */
 .player {
   position: fixed;
-  right: 8px;
-  bottom: 8px;
-  width: 80px;
-  height: 45px;
+  right: 6px;
+  bottom: 6px;
+  width: 160px;
+  height: 90px;
   opacity: 0.05;
   pointer-events: none;
 }
@@ -95,30 +87,26 @@ input[type="range"] {
 
 <body>
 
-<div class="app">
+<div class="container">
   <div class="cd" id="cd"></div>
-
   <div class="title">Q</div>
   <div class="artist">REBEL</div>
 
   <div class="controls">
-    <button onclick="toggle()">▶︎ / ❚❚</button>
-  </div>
+    <div class="buttons">
+      <button onclick="play()">▶</button>
+      <button onclick="pause()">⏸</button>
+    </div>
 
-  <div class="seek-wrap">
     <input
       type="range"
-      id="seek"
       min="0"
       max="100"
       value="0"
-      step="0.1"
-      onmousedown="startSeek()"
-      ontouchstart="startSeek()"
-      oninput="onSeek(this.value)"
-      onmouseup="endSeek(this.value)"
-      ontouchend="endSeek(this.value)"
+      class="seekbar"
+      id="seekbar"
     >
+
     <div class="time">
       <span id="current">0:00</span>
       <span id="duration">0:00</span>
@@ -126,90 +114,95 @@ input[type="range"] {
   </div>
 </div>
 
-<div class="player" id="player"></div>
+<div id="player" class="player"></div>
 
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
 let ytPlayer;
-let timer;
-let isPlaying = false;
-let isSeeking = false;
-let wasPlaying = false;
+let duration = 0;
+let seeking = false;
+
+/* 回線判定 */
+function isLikelyWifi() {
+  if (!navigator.connection) return false;
+  const type = navigator.connection.type || "";
+  const effective = navigator.connection.effectiveType || "";
+  return type === "wifi" || effective === "4g";
+}
 
 function onYouTubeIframeAPIReady() {
-  ytPlayer = new YT.Player("player", {
-    videoId: "HCoTcCMLRsM",
-    playerVars: { playsinline: 1, rel: 0 },
-    events: { onStateChange }
+  ytPlayer = new YT.Player('player', {
+    videoId: 'HCoTcCMLRsM',
+    playerVars: {
+      playsinline: 1,
+      controls: 0,
+      rel: 0,
+      modestbranding: 1,
+      iv_load_policy: 3
+    },
+    events: {
+      onReady: onReady,
+      onStateChange: onStateChange
+    }
   });
 }
 
-function toggle() {
-  if (!ytPlayer) return;
-  isPlaying ? ytPlayer.pauseVideo() : ytPlayer.playVideo();
+function onReady() {
+  ytPlayer.setPlaybackQuality('small'); // 初期は低通信
+  duration = ytPlayer.getDuration();
+  document.getElementById("duration").textContent = format(duration);
+  updateLoop();
 }
 
 function onStateChange(e) {
-  const cd = document.getElementById("cd");
-
   if (e.data === YT.PlayerState.PLAYING) {
-    isPlaying = true;
-    cd.style.animationPlayState = "running";
-    startTimer();
-  }
-
-  if (e.data === YT.PlayerState.PAUSED) {
-    isPlaying = false;
-    cd.style.animationPlayState = "paused";
-  }
-}
-
-/* seek control */
-function startSeek() {
-  isSeeking = true;
-  if (isPlaying) {
-    wasPlaying = true;
-    ytPlayer.pauseVideo();
+    document.getElementById("cd").style.animationPlayState = "running";
   } else {
-    wasPlaying = false;
+    document.getElementById("cd").style.animationPlayState = "paused";
   }
 }
 
-function onSeek(val) {
-  const dur = ytPlayer.getDuration();
-  if (dur) {
-    const time = dur * (val / 100);
-    ytPlayer.seekTo(time, true);
-    document.getElementById("current").textContent = format(time);
+function play() {
+  ytPlayer.playVideo();
+
+  setTimeout(() => {
+    ytPlayer.setPlaybackQuality(
+      isLikelyWifi() ? 'hd720' : 'small'
+    );
+  }, 1000);
+}
+
+function pause() {
+  ytPlayer.pauseVideo();
+}
+
+/* シークバー制御 */
+const seekbar = document.getElementById("seekbar");
+
+seekbar.addEventListener("input", () => {
+  seeking = true;
+});
+
+seekbar.addEventListener("change", () => {
+  const target = (seekbar.value / 100) * duration;
+  ytPlayer.seekTo(target, true);
+  seeking = false;
+});
+
+/* 時間更新 */
+function updateLoop() {
+  if (ytPlayer && ytPlayer.getCurrentTime && !seeking) {
+    const current = ytPlayer.getCurrentTime();
+    seekbar.value = (current / duration) * 100;
+    document.getElementById("current").textContent = format(current);
   }
-}
-
-function endSeek(val) {
-  const dur = ytPlayer.getDuration();
-  if (dur) ytPlayer.seekTo(dur * (val / 100), true);
-  if (wasPlaying) ytPlayer.playVideo();
-  isSeeking = false;
-}
-
-/* timer */
-function startTimer() {
-  clearInterval(timer);
-  timer = setInterval(() => {
-    if (isSeeking) return;
-    const cur = ytPlayer.getCurrentTime();
-    const dur = ytPlayer.getDuration();
-    if (dur) {
-      document.getElementById("seek").value = (cur / dur) * 100;
-      document.getElementById("current").textContent = format(cur);
-      document.getElementById("duration").textContent = format(dur);
-    }
-  }, 500);
+  requestAnimationFrame(updateLoop);
 }
 
 function format(sec) {
   const m = Math.floor(sec / 60);
-  const s = Math.floor(sec % 60);
-  return `${m}:${s.toString().padStart(2, "0")}`;
+  const s = Math.floor(sec % 60).toString().padStart(2, "0");
+  return `${m}:${s}`;
 }
 </script>
 
