--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ body {
   padding: 30px 15px;
 }
 
-/* CD */
 .cd {
   width: 260px;
   height: 260px;
@@ -39,14 +38,9 @@ body {
 .title { font-size: 20px; }
 .artist { font-size: 14px; color: #aaa; margin-bottom: 20px; }
 
-/* プレイヤーUI */
 .controls {
   max-width: 320px;
   margin: 20px auto 0;
-}
-
-.buttons {
-  margin-bottom: 10px;
 }
 
 button {
@@ -64,6 +58,10 @@ button {
   width: 100%;
 }
 
+.seekbar:disabled {
+  opacity: 0.4;
+}
+
 .time {
   font-size: 12px;
   color: #aaa;
@@ -77,9 +75,9 @@ button {
   position: fixed;
   right: 6px;
   bottom: 6px;
-  width: 80px;
-  height: 45px;
-  opacity: 0;
+  width: 160px;
+  height: 90px;
+  opacity: 0.05;
   pointer-events: none;
 }
 </style>
@@ -93,10 +91,8 @@ button {
   <div class="artist">REBEL</div>
 
   <div class="controls">
-    <div class="buttons">
-      <button onclick="play()">▶</button>
-      <button onclick="pause()">⏸</button>
-    </div>
+    <button onclick="play()">▶</button>
+    <button onclick="pause()">⏸</button>
 
     <input
       type="range"
@@ -105,6 +101,7 @@ button {
       value="0"
       class="seekbar"
       id="seekbar"
+      disabled
     >
 
     <div class="time">
@@ -121,13 +118,17 @@ button {
 let ytPlayer;
 let duration = 0;
 let seeking = false;
+let readyForPlayback = false;
+let stableTimer = null;
+
+const seekbar = document.getElementById("seekbar");
+const cd = document.getElementById("cd");
 
 /* 回線判定 */
 function isLikelyWifi() {
   if (!navigator.connection) return false;
-  const type = navigator.connection.type || "";
-  const effective = navigator.connection.effectiveType || "";
-  return type === "wifi" || effective === "4g";
+  return navigator.connection.type === "wifi"
+    || navigator.connection.effectiveType === "4g";
 }
 
 function onYouTubeIframeAPIReady() {
@@ -141,47 +142,66 @@ function onYouTubeIframeAPIReady() {
       iv_load_policy: 3
     },
     events: {
-      onReady: onReady,
-      onStateChange: onStateChange
+      onReady,
+      onStateChange
     }
   });
 }
 
 function onReady() {
-  ytPlayer.setPlaybackQuality('small'); // 初期は低通信
+  ytPlayer.setPlaybackQuality('small');
+  ytPlayer.setVolume(0); // 最初は無音
   duration = ytPlayer.getDuration();
   document.getElementById("duration").textContent = format(duration);
   updateLoop();
 }
 
-function onStateChange(e) {
-  if (e.data === YT.PlayerState.PLAYING) {
-    document.getElementById("cd").style.animationPlayState = "running";
-  } else {
-    document.getElementById("cd").style.animationPlayState = "paused";
-  }
-}
-
 function play() {
   ytPlayer.playVideo();
-
-  setTimeout(() => {
-    ytPlayer.setPlaybackQuality(
-      isLikelyWifi() ? 'hd720' : 'small'
-    );
-  }, 1000);
 }
 
 function pause() {
   ytPlayer.pauseVideo();
 }
 
-/* シークバー制御 */
-const seekbar = document.getElementById("seekbar");
+function onStateChange(e) {
+  if (e.data === YT.PlayerState.PLAYING && !readyForPlayback) {
+    // 再生が安定したら本編扱い（1秒継続）
+    stableTimer = setTimeout(startMainPlayback, 1000);
+  }
 
-seekbar.addEventListener("input", () => {
-  seeking = true;
-});
+  if (e.data !== YT.PlayerState.PLAYING && stableTimer) {
+    clearTimeout(stableTimer);
+    stableTimer = null;
+  }
+}
+
+function startMainPlayback() {
+  readyForPlayback = true;
+
+  // CD回転開始
+  cd.style.animationPlayState = "running";
+
+  // シーク解放
+  seekbar.disabled = false;
+
+  // 音量フェードイン
+  let vol = 0;
+  const target = 100;
+  const fade = setInterval(() => {
+    vol += 5;
+    ytPlayer.setVolume(vol);
+    if (vol >= target) clearInterval(fade);
+  }, 100);
+
+  // 画質切替
+  ytPlayer.setPlaybackQuality(
+    isLikelyWifi() ? 'hd720' : 'small'
+  );
+}
+
+/* シーク制御 */
+seekbar.addEventListener("input", () => seeking = true);
 
 seekbar.addEventListener("change", () => {
   const target = (seekbar.value / 100) * duration;
@@ -191,7 +211,7 @@ seekbar.addEventListener("change", () => {
 
 /* 時間更新 */
 function updateLoop() {
-  if (ytPlayer && ytPlayer.getCurrentTime && !seeking) {
+  if (ytPlayer && ytPlayer.getCurrentTime && readyForPlayback && !seeking) {
     const current = ytPlayer.getCurrentTime();
     seekbar.value = (current / duration) * 100;
     document.getElementById("current").textContent = format(current);
@@ -208,5 +228,3 @@ function format(sec) {
 
 </body>
 </html>
-
-
