--- a/index.html
+++ b/index.html
@@ -1,118 +1,3 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Now Playing</title>
-
-<style>
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
-  background: #111;
-  color: #fff;
-  text-align: center;
-}
-
-.container {
-  padding: 30px 15px;
-}
-
-.cd {
-  width: 260px;
-  height: 260px;
-  margin: 30px auto;
-  border-radius: 50%;
-  background-image: url("cd.jpeg");
-  background-size: cover;
-  background-position: center;
-  animation: spin 10s linear infinite;
-  animation-play-state: paused;
-}
-
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-.title { font-size: 20px; }
-.artist { font-size: 14px; color: #aaa; margin-bottom: 20px; }
-
-.controls {
-  max-width: 320px;
-  margin: 20px auto 0;
-}
-
-button {
-  background: #fff;
-  color: #000;
-  border: none;
-  padding: 8px 18px;
-  border-radius: 20px;
-  font-size: 14px;
-  cursor: pointer;
-  margin: 0 5px;
-}
-
-.seekbar {
-  width: 100%;
-}
-
-.seekbar:disabled {
-  opacity: 0.4;
-}
-
-.time {
-  font-size: 12px;
-  color: #aaa;
-  margin-top: 4px;
-  display: flex;
-  justify-content: space-between;
-}
-
-/* ほぼ見えないYouTube */
-.player {
-  position: fixed;
-  right: 6px;
-  bottom: 6px;
-  width: 160px;
-  height: 90px;
-  opacity: 0.05;
-  pointer-events: none;
-}
-</style>
-</head>
-
-<body>
-
-<div class="container">
-  <div class="cd" id="cd"></div>
-  <div class="title">Q</div>
-  <div class="artist">REBEL</div>
-
-  <div class="controls">
-    <button onclick="play()">▶</button>
-    <button onclick="pause()">⏸</button>
-
-    <input
-      type="range"
-      min="0"
-      max="100"
-      value="0"
-      class="seekbar"
-      id="seekbar"
-      disabled
-    >
-
-    <div class="time">
-      <span id="current">0:00</span>
-      <span id="duration">0:00</span>
-    </div>
-  </div>
-</div>
-
-<div id="player" class="player"></div>
-
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
 let ytPlayer;
@@ -150,13 +35,14 @@ function onYouTubeIframeAPIReady() {
 
 function onReady() {
   ytPlayer.setPlaybackQuality('small');
-  ytPlayer.setVolume(0); // 最初は無音
+  ytPlayer.setVolume(0); // ★ 常に初期は無音
   duration = ytPlayer.getDuration();
   document.getElementById("duration").textContent = format(duration);
   updateLoop();
 }
 
 function play() {
+  ytPlayer.setVolume(0); // ★ PLAY押下時も必ず無音
   ytPlayer.playVideo();
 }
 
@@ -166,7 +52,9 @@ function pause() {
 
 function onStateChange(e) {
   if (e.data === YT.PlayerState.PLAYING && !readyForPlayback) {
-    // 再生が安定したら本編扱い（1秒継続）
+    ytPlayer.setVolume(0); // ★ PLAYING直後も即ミュート
+
+    // 再生が1秒安定したら「本編開始」
     stableTimer = setTimeout(startMainPlayback, 1000);
   }
 
@@ -177,6 +65,7 @@ function onStateChange(e) {
 }
 
 function startMainPlayback() {
+  if (readyForPlayback) return;
   readyForPlayback = true;
 
   // CD回転開始
@@ -187,23 +76,26 @@ function startMainPlayback() {
 
   // 音量フェードイン
   let vol = 0;
-  const target = 100;
   const fade = setInterval(() => {
     vol += 5;
     ytPlayer.setVolume(vol);
-    if (vol >= target) clearInterval(fade);
+    if (vol >= 100) clearInterval(fade);
   }, 100);
 
-  // 画質切替
+  // 画質切替（ここで初めて）
   ytPlayer.setPlaybackQuality(
     isLikelyWifi() ? 'hd720' : 'small'
   );
 }
 
 /* シーク制御 */
-seekbar.addEventListener("input", () => seeking = true);
+seekbar.addEventListener("input", () => {
+  if (!readyForPlayback) return;
+  seeking = true;
+});
 
 seekbar.addEventListener("change", () => {
+  if (!readyForPlayback) return;
   const target = (seekbar.value / 100) * duration;
   ytPlayer.seekTo(target, true);
   seeking = false;
@@ -211,7 +103,12 @@ seekbar.addEventListener("change", () => {
 
 /* 時間更新 */
 function updateLoop() {
-  if (ytPlayer && ytPlayer.getCurrentTime && readyForPlayback && !seeking) {
+  if (
+    ytPlayer &&
+    ytPlayer.getCurrentTime &&
+    readyForPlayback &&
+    !seeking
+  ) {
     const current = ytPlayer.getCurrentTime();
     seekbar.value = (current / duration) * 100;
     document.getElementById("current").textContent = format(current);
@@ -225,6 +122,3 @@ function format(sec) {
   return `${m}:${s}`;
 }
 </script>
-
-</body>
-</html>
