回転前に音が出ることを物理的に止める修正

--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@ function onYouTubeIframeAPIReady() {
 }
 
 function onReady() {
+  ytPlayer.mute();                 // ★ 常にミュートで初期化
   ytPlayer.setPlaybackQuality('small');
-  ytPlayer.setVolume(0); // 常に初期無音
   duration = ytPlayer.getDuration();
   document.getElementById("duration").textContent = format(duration);
   updateLoop();
 }
 
 function play() {
-  ytPlayer.setVolume(0);
+  ytPlayer.mute();                 // ★ 再生前に必ずミュート
   ytPlayer.playVideo();
 }
 
@@ -168,28 +168,27 @@ function pause() {
 
 function onStateChange(e) {
   if (e.data === YT.PlayerState.PLAYING && !readyForPlayback) {
-    ytPlayer.setVolume(0); // PLAYING即ミュート
+    ytPlayer.mute();               // ★ PLAYINGになってもまだ無音
 
-    // 再生が1秒安定したら回転フェーズへ
+    // 再生が安定（1秒）したら回転フェーズへ
     stableTimer = setTimeout(startRotationPhase, 1000);
   }
 
   if (e.data !== YT.PlayerState.PLAYING) {
-    if (stableTimer) clearTimeout(stableTimer);
-    if (rotationTimer) clearTimeout(rotationTimer);
+    clearTimeout(stableTimer);
+    clearTimeout(rotationTimer);
     stableTimer = null;
     rotationTimer = null;
   }
 }
 
-/* 回転開始フェーズ（※まだ音は出さない） */
+/* 回転開始（※まだ音は出さない） */
 function startRotationPhase() {
   if (readyForPlayback) return;
 
-  // CD回転開始
   cd.style.animationPlayState = "running";
 
-  // 0.3秒以上回転が続いたら音解禁
+  // 回転が0.3秒以上続いたら音解禁
   rotationTimer = setTimeout(() => {
     if (cd.style.animationPlayState === "running") {
       startAudioPlayback();
@@ -197,23 +196,25 @@ function startRotationPhase() {
   }, 300);
 }
 
-/* 本当の本編開始（音・UI解禁） */
+/* 本当の本編開始 */
 function startAudioPlayback() {
   if (readyForPlayback) return;
   readyForPlayback = true;
 
-  // シーク解放
   seekbar.disabled = false;
 
-  // 音量フェードイン
+  // ★ ここで初めてアンミュート
+  ytPlayer.unMute();
+
+  // フェードイン
   let vol = 0;
+  ytPlayer.setVolume(0);
   const fade = setInterval(() => {
     vol += 5;
     ytPlayer.setVolume(vol);
     if (vol >= 100) clearInterval(fade);
   }, 100);
 
-  // 画質切替
   ytPlayer.setPlaybackQuality(
     isLikelyWifi() ? 'hd720' : 'small'
   );
@@ -256,4 +257,5 @@ function format(sec) {
 
 </body>
 </html>
+
 
